2007-10-02 Jan Kryl (version 2.0.3)

	* Characters in request must be in interval from 32 to 126 (printable
	ASCII).

	* Code handling exceptional cases was redesigned.

	* New whois error 108 "invalid request" introduced.

2007-10-01 Jan Kryl (version 2.0.2)

	* Email of object registrar is not displayed in whois output.

	* Updated copyright URL.

2007-09-27 Jan Kryl (version 2.0.1)

	* mod_whoisd crashed apache when there were more than 2 search
	keywords, which is invalid usage. This condition now triggers response
	with usage information.

2007-09-26 Jan Kryl (version 2.0.0)

	* Major code rewrite to fit new specification (see README) for whois.

	* Whois gives information for objects domains, nssets, contacts and
	registrars in classic forward and reverse manner.

	* IDL interface was completely changed from Whois.idl to Admin.idl.

	* Server side options were implemented.

	* Disclaimer changed.

	* Whois test program is no more maintained and was deleted.

2007-09-19 Jan Kryl (version 1.3.2)

	* Fix bashism in Makefile (output redirection).

2007-06-11 Jan Kryl (version 1.3.2)

	* Enhancement of configure script.
	
	* Better documentation.

2007-03-21 Jan Kryl (version 1.3.1)

	* Change of CORBA nameservice context from old ccReg to new Fred.

	* Subtle changes in test program test.py.

version 1.3.0

	* New reference manager mod_corba was added, mod_whoisd was adapted
	to changed reference management policy. Now each connection has
	its own unique CORBA reference.

	* As a side effect of changes in reference management code, the
	apache can be started without omninames running. The object references
	are obtained and resolved upon request arrival.

version 1.2.0

	* In IDL was added flag 'enum' which tells if it is enum domain or
	not. A link to web site is displayed only if this flag is false.
